[package]
name = "learn_rust"
version = "0.1.0"
authors = ["Njagi Mwaniki <njagi@urbanslug.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# debug = true # uncomment to profile

[dependencies]
